// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regex 1 1`] = `
{
  "expected": [],
  "furthest": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "position": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "success": true,
  "value": {
    "end": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": 1,
  },
}
`;

exports[`regex 12 1`] = `
{
  "expected": [],
  "furthest": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "position": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "success": true,
  "value": {
    "end": {
      "column": 3,
      "index": 2,
      "line": 1,
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": 12,
  },
}
`;

exports[`regex 23 1`] = `
{
  "expected": [],
  "furthest": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "position": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "success": true,
  "value": {
    "end": {
      "column": 3,
      "index": 2,
      "line": 1,
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": 23,
  },
}
`;

exports[`regex 234a 1`] = `
{
  "expected": [
    "eof",
  ],
  "furthest": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
  "position": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "success": false,
  "value": null,
}
`;

exports[`regex 4234 1`] = `
{
  "expected": [],
  "furthest": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "position": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
  "success": true,
  "value": {
    "end": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": 4234,
  },
}
`;

exports[`regex a1a 1`] = `
{
  "expected": [
    "eof",
  ],
  "furthest": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "position": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "success": false,
  "value": null,
}
`;

exports[`regex a123 1`] = `
{
  "expected": [
    "eof",
  ],
  "furthest": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
  "position": {
    "column": -1,
    "index": -1,
    "line": -1,
  },
  "success": false,
  "value": null,
}
`;
